turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: illegal start of simple pattern
    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
    ^Turmite:29: error: '=' expected but ';' found.
	override def run() { 
^