turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
    var state = 0;
	val 


    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {

    def changerCouleur(c:Color) ={
		setCouleurBrosse(c)
		baisseBrosse
		leveBrosse
	}

	//recherche de la couleur sur le sol et changement
	var couleurActuelle = 0
	while (getCouleurSol != colors(couleurActuelle)) couleurActuelle+=1
	changerCouleur(colors(rule(state)(couleurActuelle)(0)))
	
	if (rule(state)(couleurActuelle)(1) == 0) recule
	if (rule(state)(couleurActuelle)(1) == 2) gauche
	if (rule(state)(couleurActuelle)(1) == 4) retourne
	if (rule(state)(couleurActuelle)(1) == 8) droite
	state = rule(state)(couleurActuelle)(2)
	avance
    }
